Fix llvm/clang cross-compile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -84,12 +84,10 @@ RUN python /usr/local/generate_toolchain.py --prefix /usr/local
 RUN install-from-source https://www.zlib.net/zlib-1.2.11.tar.gz
 
 # Intel Compute Runtime (OpenCL), libva and Intel Media Driver (VAAPI)
-RUN install-package ruby
 RUN install-cmake-from-source https://github.com/llvm/llvm-project/releases/download/llvmorg-8.0.1/llvm-8.0.1.src.tar.xz
-RUN install-package clang llvm
-COPY --chown=nubots:nubots usr/local/package/clang/install-from-source /usr/local/package/clang.sh
-RUN /usr/local/package/clang.sh \
-    https://github.com/llvm/llvm-project/releases/download/llvmorg-8.0.1/cfe-8.0.1.src.tar.xz
+RUN install-from-source https://github.com/llvm/llvm-project/releases/download/llvmorg-8.0.1/cfe-8.0.1.src.tar.xz \
+    -DLLVM_TABLEGEN=/usr/bin/llvm-tblgen \
+    -DCLANG_TABLEGEN=/usr/bin/clang-tblgen
 RUN install-from-source https://xorg.freedesktop.org/releases/individual/lib/libpciaccess-0.16.tar.bz2
 RUN install-meson-from-source https://dri.freedesktop.org/libdrm/libdrm-2.4.99.tar.bz2 \
     -Dudev=false \
@@ -121,6 +119,7 @@ COPY --chown=nubots:nubots usr/local/package/opencl-headers/install-from-source 
 RUN /usr/local/package/opencl-headers.sh https://github.com/KhronosGroup/OpenCL-Headers/archive/master.tar.gz
 COPY --chown=nubots:nubots usr/local/package/opencl-clhpp/install-from-source /usr/local/package/opencl-clhpp.sh
 RUN /usr/local/package/opencl-clhpp.sh https://github.com/KhronosGroup/OpenCL-CLHPP/archive/master.tar.gz
+RUN install-package ruby
 COPY --chown=nubots:nubots usr/local/package/ocl-icd/install-from-source /usr/local/package/ocl-icd.sh
 RUN /usr/local/package/ocl-icd.sh https://github.com/OCL-dev/ocl-icd/archive/v2.2.12.tar.gz
 RUN install-from-source https://github.com/intel/media-driver/archive/intel-media-19.2.1.tar.gz \
