--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -14,7 +14,8 @@
 		"galarius.vscode-opencl",
 		"ms-python.python",
 		"zxh404.vscode-proto3",
-		"redhat.vscode-yaml"
+		"redhat.vscode-yaml",
+		"streetsidesoftware.code-spell-checker"
 	],
 	"settings": {
 		"C_Cpp.clang_format_path": "/usr/local/bin/clang-format"
