--- a/module/output/ImageCompressor/data/config/ImageCompressor.yaml
+++ b/module/output/ImageCompressor/data/config/ImageCompressor.yaml
@@ -1,4 +1,9 @@
-# Quality of compressed image
-quality: 75
-# Method of which to perform debayering
-method: SIMPLE
+# The settings for each compressor
+# These compressors will be tried in order per camera_id until a free compressor is found
+compressors:
+  - name: vaapi
+    concurrent: 2
+    quality: 90
+  - name: turbojpeg
+    concurrent: 2
+    quality: 90
