Add the configuration file

--- a/module/output/ImageCompressor/data/config/ImageCompressor.yaml
+++ b/module/output/ImageCompressor/data/config/ImageCompressor.yaml
@@ -4,6 +4,8 @@ compressors:
   - name: vaapi
     concurrent: 2
     quality: 90
+    device: /dev/dri/renderD128
+    driver: iHD
   - name: turbojpeg
     concurrent: 2
     quality: 90
