--- a/module/input/Camera/CMakeLists.txt
+++ b/module/input/Camera/CMakeLists.txt
@@ -1,11 +1,6 @@
-# Find libjpeg library
-find_package(JPEG REQUIRED)
-
-find_package(Aravis REQUIRED)
-find_package(glib2 REQUIRED)
+# Find Aravis
+FIND_PACKAGE(Aravis REQUIRED)
 
 # Build our NUClear module
-nuclear_module(
-  INCLUDES ${JPEG_INCLUDE_DIR} ${Aravis_INCLUDE_DIRS} ${glib2_INCLUDE_DIRS}
-  LIBRARIES ${JPEG_LIBRARIES} ${Aravis_LIBRARY} ${glib2_LIBRARIES}
-)
+NUCLEAR_MODULE(INCLUDES ${Aravis_INCLUDE_DIRS} 
+               LIBRARIES ${Aravis_LIBRARIES})
