--- a/module/input/Camera/data/config/Cameras/Right.yaml
+++ b/module/input/Camera/data/config/Cameras/Right.yaml
@@ -6,6 +6,11 @@ lens:
   focal_length: 412.507218876330336
   centre: [0, 0]
   fov: 3.14
+  Hcp:
+    - [1.0, 0.0, 0.0, 0.0]
+    - [0.0, 1.0, 0.0, 0.0]
+    - [0.0, 0.0, 1.0, 0.0]
+    - [0.0, 0.0, 0.0, 1.0]
 
 settings:
   PixelFormat: BayerRG8
