--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,23 +1,26 @@
 // See https://aka.ms/vscode-remote/devcontainer.json for format details.
 {
-	"name": "NUbots",
-	"dockerComposeFile": ".vscode/docker-compose.yml",
-	"service": "vscode",
-	"workspaceFolder": "/home/nubots/NUbots",
-	"extensions": [
-		"ms-vscode.cpptools",
-		"twxs.cmake",
-		"vector-of-bool.cmake-tools",
-		"maddouri.cmake-tools-helper",
-		"cheshirekow.cmake-format",
-		"ms-azuretools.vscode-docker",
-		"galarius.vscode-opencl",
-		"ms-python.python",
-		"zxh404.vscode-proto3",
-		"redhat.vscode-yaml",
-		"streetsidesoftware.code-spell-checker"
-	],
-	"settings": {
-		"C_Cpp.clang_format_path": "/usr/local/bin/clang-format"
-	}
+    "name": "NUbots",
+    "image": "nubots:nuc7i7bnh",
+    "workspaceMount": "type=bind,consistency=delegated,src=${localWorkspaceFolder},dst=/home/nubots/NUbots",
+    "workspaceFolder": "/home/nubots/NUbots",
+    "extensions": [
+        "ms-vscode.cpptools",
+        "twxs.cmake",
+        "vector-of-bool.cmake-tools",
+        "maddouri.cmake-tools-helper",
+        "cheshirekow.cmake-format",
+        "ms-azuretools.vscode-docker",
+        "galarius.vscode-opencl",
+        "ms-python.python",
+        "zxh404.vscode-proto3",
+        "redhat.vscode-yaml",
+        "streetsidesoftware.code-spell-checker"
+    ],
+    "settings": {
+        "C_Cpp.clang_format_path": "/usr/local/bin/clang-format",
+        "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
+        "cmake.buildDirectory": "/home/nubots/build",
+        "cmake.configureOnOpen": true
+    }
 }
