Add extra patches to eigen3
First patch removes eigen alignment macros is c++17 is available.

Second patch adds convenience typedefs for unsigned int types

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -159,8 +159,12 @@ COPY --chown=nubots:nubots usr/local/include/armadillo_bits/config.hpp /usr/loca
 
 # Eigen3
 COPY --chown=nubots:nubots usr/local/package/eigen3/deprecated-copy.patch usr/local/package/deprecated-copy.patch
+COPY --chown=nubots:nubots usr/local/package/eigen3/unsigned-types.patch usr/local/package/unsigned-types.patch
+COPY --chown=nubots:nubots usr/local/package/eigen3/cxx17-overalign.patch usr/local/package/cxx17-overalign.patch
 RUN install-from-source-with-patches http://bitbucket.org/eigen/eigen/get/3.3.7.tar.bz2 \
-    /usr/local/package/deprecated-copy.patch --
+    /usr/local/package/deprecated-copy.patch \
+    /usr/local/package/unsigned-types.patch \
+    /usr/local/package/cxx17-overalign.patch --
 
 # tcmalloc
 RUN install-from-source \
