Update arch as first command

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,6 +8,9 @@
 ##############################################
 FROM archlinux:20191006
 
+# Arch recommends running this as the first command of the docker image
+RUN pacman -Syu
+
 # Create the nubots user, and setup sudo so no password is required
 RUN useradd --no-log-init -m -U nubots
 COPY --chown=root:root etc/sudoers.d/user /etc/sudoers.d/user
