--- a/shared/tests/CMakeLists.txt
+++ b/shared/tests/CMakeLists.txt
@@ -11,16 +11,16 @@ file(GLOB_RECURSE test_src "*/**.cpp" "*/**.h")
 if(test_src)
   add_executable(TestShared "${CMAKE_SOURCE_DIR}/${NUCLEAR_SHARED_DIR}/tests/test.cpp" ${test_src})
   target_link_libraries(
-    TestShared
-    ${NUCLEAR_ADDITIONAL_SHARED_LIBRARIES}
-    ${NUCLEAR_UTILITY_LIBRARIES}
-    ${NUCLEAR_MESSAGE_LIBRARIES}
-    ${NUClear_LIBRARIES}
-    ${NUCLEAR_TEST_LIBRARIES}
+    TestShared ${NUCLEAR_ADDITIONAL_SHARED_LIBRARIES} ${NUCLEAR_UTILITY_LIBRARIES} ${NUCLEAR_MESSAGE_LIBRARIES}
+    ${NUClear_LIBRARIES} ${NUCLEAR_TEST_LIBRARIES}
   )
 
   set_property(TARGET TestShared PROPERTY FOLDER "shared/tests")
 
   # Add the test
-  add_test(NAME TestShared WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/TestShared)
+  add_test(
+    NAME TestShared
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${CMAKE_CURRENT_BINARY_DIR}/TestShared
+  )
 endif(test_src)
