--- a/shared/utility/CMakeLists.txt
+++ b/shared/utility/CMakeLists.txt
@@ -41,4 +41,7 @@ add_library(nutilities ${NUTILITIES_LIBRARIES_FILES})
 target_link_libraries(nutilities ${NUCLEAR_MESSAGE_LIBRARIES})
 target_link_libraries(nutilities ${NUCLEAR_ADDITIONAL_SHARED_LIBRARIES})
 
-set(NUCLEAR_UTILITY_LIBRARIES nutilities CACHE INTERNAL "Library for NUClear utilities" FORCE)
+set(NUCLEAR_UTILITY_LIBRARIES
+    nutilities
+    CACHE INTERNAL "Library for NUClear utilities" FORCE
+)
