--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
     ],
     "python.formatting.provider": "black",
     "files.associations": {
-        "*.role": "cmake"
+        "*.role": "cmake",
+        "thread": "cpp",
+        "random": "cpp",
+        "boundingbox": "cpp",
+        "boundingsphere": "cpp"
     }
 }
