--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,7 @@
 steps:
   # Push up new images to DockerHub when they get to master
   - label: ":docker: Push new images"
-    # branches: master Uncomment me when it works!
+    branches: master
     agents:
       dockerhub: true
     plugins:
